--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -5,9 +5,10 @@
 
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    Username: <input name="username">
+    Password: <input name="password">
     <input type="submit" value="login">
     <input type="hidden" name="next" value="{{ next }}">
   </form>
-
+  
 {% endblock %}
