--- a/main_app/templates/results/index.html
+++ b/main_app/templates/results/index.html
@@ -3,11 +3,13 @@
 
 <p>Search results for "{{ message }}"...</p>
 <form action="{% url 'results' %}" method="GET">
-    {% csrf_token %}
     <label>Find a food project</label> <br>
     <input type="text" name="search"> <br>
     <button>Search</button>
 </form>
 
+<form action="{% url 'show_all' %}" method="GET">
+    <button>Show All</button>
+</form>
 
 {% endblock %}
