--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <nav>
+        <li><a href="{% url 'home' %}">Home</a></li>
+        {% if user.is_authenticated and user.type == 'Eater' %}
+        <li><a href="{% url 'favourites' user.id %}">My Favourites</a></li>
+        <li><a href="{% url 'logout' %}">Log Out</a></li>
+        {% elif user.is_authenticated and user.type == 'Owner' %}
+        <li><a href="{% url 'logout' %}">Log Out</a></li>
+        {% else %}
+        <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        <li><a href="{% url 'login' %}">Log In</a></li>
+        {% endif %}
+    </nav>
     {% block content %}
     {% endblock %}
 </body>
