--- a/main_app/templates/results/index.html
+++ b/main_app/templates/results/index.html
@@ -20,6 +20,11 @@
         {% for truck in queryset %}
         <li>
             <a href="{% url 'results_show' truck.id %}">{{ truck.name }}</a>
+            {% if truck.overall_rating %}
+            <p>{{ truck.overall_rating|floatformat:1 }} / 5.0</p>
+            {% else %}
+            <p>No ratings yet...</p>
+            {% endif %}
         </li>
         {% endfor %}
     </ul>
