--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -11,9 +11,14 @@
   Confirm Password: <input name="password" type="password"> -->
   <!-- do we want first and last name? -->
   <!-- Name: <input name="name"> -->
-  {{ form.as_p }}
   <!-- E-mail: <input name="email" type="email"> -->
+  {{ form.as_p }}
+  <!-- Username: {{form.username}}
+  Password: {{form.password1}}
+  Confirm Password: {{form.password2}}
+  Type: {{form.groups}} -->
   <input type="submit" value="signup">
+  {{form.errors}}
 </form>
 
 {% endblock %}
