added owner form

--- a/main_app/templates/owners/index.html
+++ b/main_app/templates/owners/index.html
@@ -1,9 +1,11 @@
 {% extends 'base.html'%}
 {% block content %}
 
-{% for t in trucks %}
-<li>{{ t.name }}</li>
+{% for truck in trucks %}
+<p>{{ truck.name }}</p>
+<p>{{ truck.overall_rating }}</p>
+<hr>
 {% endfor %}
-<a href="/owners/new">Add</a>
+<a href="{% url 'owners_new' user.id %}">Add</a>
 
 {% endblock %}
