--- a/main_app/templates/owners/new.html
+++ b/main_app/templates/owners/new.html
@@ -1,9 +1,91 @@
 {% extends 'base.html'%}
 {% block content %}
 
-<form action="." method="POST">
-    <input type="text">
-    <button>Add</button>
-</form>
+<h1>New Truck</h1>
 
+<form action="{% url 'owners_create' user.id %}" method="POST">
+    <input type="text" name="name" placeholder="Enter truck name"> <br>
+    <input type="text" name="location" placeholder="Enter location"> <br>
+    <textarea name="description" cols="30" rows="10" placeholder="Enter truck description"></textarea> <br>
+    <table>
+        <tr>
+            <th>Day</th>
+            <th>Open Hours</th>
+            <th>Close Hours</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td><input type="time" name="monday_open"></td>
+            <td><input type="time" name="monday_close"></td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td><input type="time" name="tuesday_open"></td>
+            <td><input type="time" name="tuesday_close"></td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td><input type="time" name="wednesday_open"></td>
+            <td><input type="time" name="wednesday_close"></td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td><input type="time" name="thursday_open"></td>
+            <td><input type="time" name="thursday_close"></td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td><input type="time" name="friday_open"></td>
+            <td><input type="time" name="friday_close"></td>
+        </tr>
+        <tr>
+            <td>Saturday</td>
+            <td><input type="time" name="saturday_open"></td>
+            <td><input type="time" name="saturday_close"></td>
+        </tr>
+        <tr>
+            <td>Sunday</td>
+            <td><input type="time" name="sunday_open"></td>
+            <td><input type="time" name="sunday_close"></td>
+        </tr>
+    </table>
+    <table class="menu">
+        <tr>
+            <th>Food Name</th>
+            <th>Food Description</th>
+            <th>Price</th>
+        </tr>
+        <tr>
+            <td><input type="text" name="name"></td>
+            <td><input type="text" name="description"></td>
+            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="price" placeholder="0.00"></td>
+        </tr>
+        <tr>
+            <td><input type="text" name="name"></td>
+            <td><input type="text" name="description"></td>
+            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="price" placeholder="0.00"></td>
+        </tr>
+        <tr>
+            <td><input type="text" name="name"></td>
+            <td><input type="text" name="description"></td>
+            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="price" placeholder="0.00"></td>
+        </tr>
+    </table>
+    <button type="button" class="new-menu">Add More Items</button>
+    <br> <br>
+    <button>Create New Listing</button>
+</form>
+<script>
+    let menuTable = document.querySelector('.menu')
+    let newMenuBtn = document.querySelector('.new-menu')
+    newMenuBtn.addEventListener('click', () => {
+        let newRow = menuTable.insertRow(-1);
+        let cell1 = newRow.insertCell(0);
+        let cell2 = newRow.insertCell(1);
+        let cell3 = newRow.insertCell(2);
+        cell1.innerHTML = `<input type="text" name="name">`
+        cell2.innerHTML = `<input type="text" name="description">`
+        cell3.innerHTML = `<input type="number" min="0.00" max="10000.00" step="0.01" name="price" placeholder="0.00">`
+    })
+</script>
 {% endblock %}
