added owner form creation

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <form action="{% url 'results' %}" method="GET">
-    <label>Find a food project</label> <br>
+    <label>Find a food truck</label> <br>
     <input type="text" name="search"> <br>
     <button>Search</button>
 </form>
