--- a/main_app/templates/show.html
+++ b/main_app/templates/show.html
@@ -3,7 +3,7 @@
 
 <p>Showing all results in Toronto, ON</p>
 <form action="{% url 'results' %}" method="GET">
-    <label>Find a food project</label> <br>
+    <label>Find a food truck</label> <br>
     <input type="text" name="search"> <br>
     <button>Search</button>
 </form>
