--- a/main_app/templates/owners/edit.html
+++ b/main_app/templates/owners/edit.html
@@ -6,7 +6,8 @@
 <form action="{% url 'owners_update' owner.id truck.id %}" method="POST">
     {% csrf_token %}
     <input type="text" name="name" placeholder="Enter truck name" value="{{ truck.name }}"> <br>
-    <input type="text" name="location" placeholder="Enter location" value="{{ truck.location}}"> <br>
+    <input id="autocomplete" type="text" placeholder="Enter a location" name="location" value="{{ truck.location}}" />
+    <br>
     <textarea name="description" cols="30" rows="10"
         placeholder="Enter truck description">{{ truck.description }}</textarea> <br>
     <table>
@@ -109,6 +110,13 @@
             menuTable.deleteRow(btn.parentElement.parentElement.rowIndex)
         })
     })
+</script>
+<script
+    src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
+<script>
+    new google.maps.places.Autocomplete(
+        document.getElementById("autocomplete")
+    );
 </script>
 
 {% endblock %}
