--- a/main_app/templates/users/favourites.html
+++ b/main_app/templates/users/favourites.html
@@ -4,6 +4,7 @@
 <h1>{{ eater }}'s Favourites</h1>
 {% for favourite in favourites %}
 <li>
+    <img src="{{favourite.truck.url}}">
     <a href="{% url 'results_show' favourite.truck.id %}">{{ favourite.truck.name }}</a>
 </li>
 {% endfor %}
