added main page styling and search page

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,14 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<form action="{% url 'results' %}" method="GET">
-    <label>Find a food truck</label> <br>
-    <input type="text" name="search"> <br>
-    <button>Search</button>
-</form>
-
-<form action="{% url 'show_all' %}" method="GET">
-    <button>Show All</button>
-</form>
-
+<div class="sub-index-main">
+    <div class="index-main">
+        <p>Find food trucks in Toronto!</p>
+        <form action="{% url 'results' %}" method="GET" class="index-form">
+            <div class="input-group">
+                <input name="search" class="form-control border-end-0 border" type="text" id="example-search-input"
+                    placeholder="e.g. taco, burgers, italian">
+                <div class="input-group-append">
+                    <button class="btn btn-primary">
+                        <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                            </svg></span>
+                    </button>
+                </div>
+            </div>
+        </form>
+        <p class="or-index">or</p>
+        <form action="{% url 'show_all' %}" method="GET" class="index-form-showall">
+            <button class="btn btn-primary">Show All Trucks</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
