--- a/main_app/templates/owners/edit.html
+++ b/main_app/templates/owners/edit.html
@@ -3,7 +3,7 @@
 
 <h1>Edit {{ truck.name }}</h1>
 
-<form action="{% url 'owners_update' owner.id truck.id %}" enctype="multipart/form-data" method="POST">
+<form action="{% url 'owners_update' owner.id truck.id %}" onsubmit="return validateForm()" enctype="multipart/form-data" method="POST">
     {% csrf_token %}
     <input type="text" name="name" placeholder="Enter truck name" value="{{ truck.name }}"> <br>
     <input id="autocomplete" type="text" placeholder="Enter a location" name="location" value="{{ truck.location}}" />
@@ -19,38 +19,38 @@
         </tr>
         <tr>
             <td>Monday</td>
-            <td><input type="time" name="monday_open" value="{{ hours.monday_open }}"></td>
-            <td><input type="time" name="monday_close" value="{{ hours.monday_close }}"></td>
+            <td><input type="time" class="open" name="monday_open" value="{{ hours.monday_open }}"></td>
+            <td><input type="time" class="close" name="monday_close" value="{{ hours.monday_close }}"></td>
         </tr>
         <tr>
             <td>Tuesday</td>
-            <td><input type="time" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
-            <td><input type="time" name="tuesday_close" value="{{ hours.tuesday_close }}"></td>
+            <td><input type="time" class="open" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
+            <td><input type="time" class="close" name="tuesday_close" value="{{ hours.tuesday_close }}"></td>
         </tr>
         <tr>
             <td>Wednesday</td>
-            <td><input type="time" name="wednesday_open" value="{{ hours.wednesday_open }}"></td>
-            <td><input type="time" name="wednesday_close" value="{{ hours.wednesday_close }}"></td>
+            <td><input type="time" class="open" name="wednesday_open" value="{{ hours.wednesday_open }}"></td>
+            <td><input type="time" class="close" name="wednesday_close" value="{{ hours.wednesday_close }}"></td>
         </tr>
         <tr>
             <td>Thursday</td>
-            <td><input type="time" name="thursday_open" value="{{ hours.thursday_open }}"></td>
-            <td><input type="time" name="thursday_close" value="{{ hours.thursday_close }}"></td>
+            <td><input type="time" class="open" name="thursday_open" value="{{ hours.thursday_open }}"></td>
+            <td><input type="time" class="close" name="thursday_close" value="{{ hours.thursday_close }}"></td>
         </tr>
         <tr>
             <td>Friday</td>
-            <td><input type="time" name="friday_open" value="{{ hours.friday_open }}"></td>
-            <td><input type="time" name="friday_close" value="{{ hours.friday_close }}"></td>
+            <td><input type="time" class="open" name="friday_open" value="{{ hours.friday_open }}"></td>
+            <td><input type="time" class="close" name="friday_close" value="{{ hours.friday_close }}"></td>
         </tr>
         <tr>
             <td>Saturday</td>
-            <td><input type="time" name="saturday_open" value="{{ hours.saturday_open }}"></td>
-            <td><input type="time" name="saturday_close" value="{{ hours.saturday_close }}"></td>
+            <td><input type="time" class="open" name="saturday_open" value="{{ hours.saturday_open }}"></td>
+            <td><input type="time" class="close" name="saturday_close" value="{{ hours.saturday_close }}"></td>
         </tr>
         <tr>
             <td>Sunday</td>
-            <td><input type="time" name="sunday_open" value="{{ hours.sunday_open }}"></td>
-            <td><input type="time" name="sunday_close" value="{{ hours.sunday_close }}"></td>
+            <td><input type="time" class="open" name="sunday_open" value="{{ hours.sunday_open }}"></td>
+            <td><input type="time" class="close" name="sunday_close" value="{{ hours.sunday_close }}"></td>
         </tr>
     </table>
     <p>Tags</p>
@@ -111,6 +111,17 @@
             menuTable.deleteRow(btn.parentElement.parentElement.rowIndex)
         })
     })
+    let openHour = document.querySelectorAll('.open')
+    let closeHour = document.querySelectorAll('.close')
+    validateForm = () => {
+        for (i = 0; i < openHour.length; i++) {
+            if (openHour[i].value != "" && closeHour[i].value == "") {
+                    closeHour[i].required = true
+                    alert('enter closing time')
+                    return false;
+            }
+        }
+    }
 </script>
 <script
     src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
