--- a/main_app/templates/owners/new.html
+++ b/main_app/templates/owners/new.html
@@ -61,21 +61,21 @@
             <th></th>
         </tr>
         <tr>
-            <td><input type="text" name="food_name"></td>
-            <td><input type="text" name="food_description"></td>
-            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
+            <td><input type="text" class="food-name" name="food_name"></td>
+            <td><input type="text" class="food-description" name="food_description"></td>
+            <td><input type="number" class="food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
             <td><button type="button" class="delete">-</button></td>
         </tr>
         <tr>
-            <td><input type="text" name="food_name"></td>
-            <td><input type="text" name="food_description"></td>
-            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
+            <td><input type="text" class="food-name" name="food_name"></td>
+            <td><input type="text" class="food-description" name="food_description"></td>
+            <td><input type="number" class="food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
             <td><button type="button" class="delete">-</button></td>
         </tr>
         <tr>
-            <td><input type="text" name="food_name"></td>
-            <td><input type="text" name="food_description"></td>
-            <td><input type="number" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
+            <td><input type="text" class="food-name" name="food_name"></td>
+            <td><input type="text" class="food-description" name="food_description"></td>
+            <td><input type="number" class="food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
             <td><button type="button" class="delete">-</button></td>
         </tr>
     </table>
@@ -92,9 +92,9 @@
         let cell2 = newRow.insertCell(1);
         let cell3 = newRow.insertCell(2);
         let cell4 = newRow.insertCell(3);
-        cell1.innerHTML = `<input type="text" name="food_name">`
-        cell2.innerHTML = `<input type="text" name="food_description">`
-        cell3.innerHTML = `<input type="number" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00">`
+        cell1.innerHTML = `<input type="text" class="food-name" name="food_name">`
+        cell2.innerHTML = `<input type="text" class="food-description" name="food_description">`
+        cell3.innerHTML = `<input type="number" class="food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00">`
         cell4.innerHTML = `<button type="button" class="delete">-</button>`
         cell4.children[0].addEventListener('click', () => {
             menuTable.deleteRow(cell4.children[0].parentElement.parentElement.rowIndex)
@@ -108,11 +108,22 @@
     })
     let openHour = document.querySelectorAll('.open')
     let closeHour = document.querySelectorAll('.close')
+    let foodName = document.querySelectorAll('.food-name')
+    let foodDescription = document.querySelectorAll('.food-description')
+    let foodPrice = document.querySelectorAll('.food-price')
     validateForm = () => {
         for (i = 0; i < openHour.length; i++) {
             if (openHour[i].value != "" && closeHour[i].value == "") {
                     closeHour[i].required = true
                     alert('enter closing time')
+                    return false;
+            }
+        }
+        for (i = 0; i < foodName.length; i++) {
+            if (foodName[i].value != "" && foodDescription[i].value == "" || foodName[i].value != "" && foodPrice[i].value == "") {
+                    foodDescription[i].required = true
+                    foodPrice[i].required = true
+                    alert('complete food setup')
                     return false;
             }
         }
