--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>FoodTruckApp</title>
 </head>
@@ -49,6 +51,8 @@
         {% endblock %}
     </div>
 </body>
+<script src="{% static 'javascript/tabs.js' %}"></script>
+
 <script src="{% static 'javascript/navbar.js' %}"></script>
 
 </html>
