--- a/main_app/templates/results/index.html
+++ b/main_app/templates/results/index.html
@@ -23,21 +23,66 @@
 
 <hr>
 
-<div>
-    <ul>
-        {% for truck in queryset %}
-        <li>
-            <img src="{{truck.url}}">
-            <a href="{% url 'results_show' truck.id %}">{{ truck.name }}</a>
-            {% if truck.overall_rating %}
-            <p>{{ truck.overall_rating|floatformat:1 }} / 5.0</p>
-            {% else %}
-            <p>No ratings yet...</p>
-            {% endif %}
-        </li>
-        {% endfor %}
-    </ul>
+<div class="wrapper">
+    <div class="buttonWrapper">
+        <button class="tab-button active" data-id="home">List</button>
+        <button class="tab-button" data-id="about">Map</button>
+    </div>
+    <div class="contentWrapper">
+        <div class="content active" id="home">
+            {% for truck in queryset %}
+            <a href="{% url 'results_show' truck.id %}">
+                <table class="truck-container">
+                    <div class="truck-container-image">
+                        <img src="{{truck.url}}">
+                    </div>
+                    <div class="truck-description-container">
+                        <div class="truck-description-name">
+                            <p>{{ truck.name }}</p>
+                        </div>
+                        <div class="truck-description-rating">
+                            {% if truck.overall_rating %}
+                            <p>
+                                <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                                        fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                    </svg></span>
+                                <span class="text">{{ truck.overall_rating|floatformat:1 }} / 5.0 - {{ truck.num_reviews }} reviews</span>
+                            </p>
+                            {% else %}
+                            <p>No ratings yet...</p>
+                            {% endif %}
+                        </div>
+                        <div class="truck-description-tags">
+                            {% for tag in tags %}
+                            {% if tag.truck.id == truck.id %}
+                                {{ tag.content }}, 
+                            {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </table>
+            </a>
+            {% endfor %}
+        </div>
+        <p class="content" id="about">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis maxime itaque veritatis iste soluta
+            placeat obcaecati laudantium repellat corrupti! Eius sunt rerum inventore magnam? Perspiciatis facere error
+            suscipit quisquam quibusdam.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, corporis voluptatem quo dignissimos eius
+            quis perferendis vero culpa reiciendis nulla quisquam fugit minima sed molestiae excepturi beatae
+            repudiandae ea? Aliquid!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sapiente officia vel consequuntur, hic at
+            quis? Illo repellendus dolores totam facilis sunt sequi qui hic, nulla ratione harum porro perspiciatis.
+        </p>
+
+    </div>
 </div>
+
+
+
+
 
 
 
