--- a/main_app/templates/results/show.html
+++ b/main_app/templates/results/show.html
@@ -29,7 +29,7 @@
 
 <hr>
 <h1>Reviews</h1>
-{% if user.is_authenticated and user.type == 'Eater' and person_review == None %}
+{% if user.is_authenticated and user.type == 'Eater'%}
 <form action="{% url 'create_review' truck.id %}" method="post">
     {% csrf_token %}
     <select name="rating" required>
