--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,6 +2,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.hidden {
+  display: none;
+}
+
 /* NAV BAR */
 
 #logo {
@@ -142,7 +146,6 @@ body {
 }
 
 button {
-  letter-spacing: 3px;
   border: none;
   padding: 10px;
   background-color: #bcd5ef;
@@ -166,7 +169,7 @@ button.active {
 
 .content {
   display: none;
-  padding: 10px 20px;
+  padding: 10px;
 }
 
 .content.active {
@@ -183,12 +186,29 @@ button.active {
   height: 1rem;
 }
 
-.truck-container {
+.top-search {
+  padding: 0 20px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.top-search p {
+  font-size: 1.3rem;
+  text-align: center;
+  /* border-bottom: 1px solid #e6e6e6; */
+}
+
+.top-search button {
   background: #bcd5ef;
+  border-color: #bcd5ef;
+}
+
+.truck-container {
+  /* background: #bcd5ef; */
   display: flex;
-  margin: 10px 0;
-  height: 6rem;
-  border-radius: 0.5rem;
+  /* margin: 10px 0; */
+  border-bottom: 1px solid #e6e6e6;
+  /* border-radius: 0.5rem; */
 }
 
 .truck-container-image {
@@ -207,7 +227,6 @@ button.active {
 
 .truck-description-name {
   font-size: 1rem;
-  font-weight: bold;
   margin-top: 0.5rem;
 }
 
@@ -225,17 +244,30 @@ button.active {
   margin-bottom: 0;
 }
 
-/* .truck-description-name,
-.truck-description-rating,
 .truck-description-tags {
-  height: 33%;
-} */
-
-.truck-description-tags {
-  /* display: flex;
-  justify-content: space-evenly; */
   font-size: 0.7rem;
 }
 
-.truck-description-tags {
+.truck-description-location {
+  font-size: 0.7rem;
 }
+
+#map {
+  height: 500px;
+  width: 100%;
+}
+
+.pin {
+  text-align: center;
+}
+
+#title {
+  font-size: 1rem;
+}
+
+#details {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+
+/* RESULTS SHOW PAGE */
