--- a/main_app/templates/results/show.html
+++ b/main_app/templates/results/show.html
@@ -1,14 +1,26 @@
 {% extends 'base.html'%}
 {% block content %}
 
-<hr>
-
-<p>Truck ID: {{ truck.id }}</p>
 <p>Truck Name: {{ truck.name }}</p>
-{% if truck.overall_rating %}
-<p>Truck Rating: {{ truck.overall_rating|floatformat:1 }} / 5.0</p>
+<p>
+    {% if truck.overall_rating %}
+    <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor"
+            class="bi bi-star-fill" viewBox="0 0 16 16">
+            <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+        </svg></span>
+    <span class="text">
+        <span class="rating">{{ truck.overall_rating|floatformat:1 }} / 5.0</span>
+        - {{ truck.num_reviews }}
+        {% if truck.num_reviews == 1 %}
+        review
+        {% else %}
+        reviews
+        {% endif %}
+    </span>
+</p>
 {% else %}
-<p>Truck Rating: No user ratings for this truck yet</p>
+<p class="rating">No ratings yet...</p>
 {% endif %}
 <img src="{{truck.url}}">
 <p>Truck Location: {{ truck.location }}</p>
