--- a/main_app/templates/show.html
+++ b/main_app/templates/show.html
@@ -1,28 +1,146 @@
 {% extends 'base.html'%}
 {% block content %}
-
-<br>
-
-<form action="{% url 'results' %}" method="GET">
-    <label>Find a food truck</label> <br>
-    <input type="text" name="search"> <br>
-    <button>Search</button>
-</form>
-
-<p>Showing all results in Toronto, ON</p>
-
-{% for truck in trucks %}
-<div>
-    <p>{{ truck.name }}</p>
-    <p>{{ truck.overall_rating }}</p>
-    {% for tag in tags %}
-    {% if tag.truck.id == truck.id %}
-    <li>{{ tag.content }}</li>
-    {% endif %}
-    {% endfor %}
-    <p><a href="{% url 'results_show' truck.id %}">See More</a></p>
+<div class="top-search">
+    <div class="search-form">
+        <form action="{% url 'results' %}" method="GET" class="index-form">
+            <div class="input-group">
+                <input name="search" class="form-control border-end-0 border" type="text" id="example-search-input"
+                    placeholder="e.g. taco, burgers, italian">
+                <div class="input-group-append">
+                    <button class="btn btn-primary">
+                        <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                            </svg></span>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <br>
+    <p>All food trucks in Toronto, ON</p>
 </div>
-<hr>
-{% endfor %}
+<div class="wrapper">
+    <div class="buttonWrapper">
+        <button class="tab-button active" data-id="home">List</button>
+        <button class="tab-button" data-id="about">Map</button>
+    </div>
+    <div class="contentWrapper">
+        <div class="content active" id="home">
+            {% for truck in trucks %}
+            <a href="{% url 'results_show' truck.id %}">
+                <div class="truck-container">
+                    <div class="truck-container-image">
+                        <img src="{{truck.url}}">
+                    </div>
+                    <div class="truck-description-container">
+                        <div class="truck-description-name">
+                            <p>{{ truck.name }}</p>
+                        </div>
+                        <div class="truck-description-rating">
+                            {% if truck.overall_rating %}
+                            <p>
+                                <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                                        fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                    </svg></span>
+                                <span class="text">
+                                    <span class="rating">{{ truck.overall_rating|floatformat:1 }} / 5.0</span>
+                                    - {{ truck.num_reviews }}
+                                    {% if truck.num_reviews == 1 %}
+                                    review
+                                    {% else %}
+                                    reviews
+                                    {% endif %}
+                                </span>
+                            </p>
+                            {% else %}
+                            <p class="rating">No ratings yet...</p>
+                            {% endif %}
+                        </div>
+                        <div class="truck-description-tags">
+                            {% for tag in tags %}
+                            {% if tag.truck.id == truck.id %}
+                            {{ tag.content }}
+                            {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="truck-description-location">
+                            <p>{{ truck.location }}</p>
+                        </div>
+                        <p class="hidden">{{ truck.id }}</p>
+                    </div>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
+        <div class="content" id="about">
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
+
+<script
+    src="https://maps.googleapis.com/maps/api/js?libraries=places&libraries=&v=weekly&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
+
+<script>
+    let count = 0;
+    let savedVals = [];
+    let ratings = [];
+    document.querySelectorAll('.rating').forEach((rating) => {
+        ratings.push(rating.innerHTML);
+    })
+    let trucks = document.querySelectorAll('.truck-container');
+    trucks.forEach((truck) => {
+        let name = truck.children[1].children[0].children[0].innerHTML;
+        let rating = ratings[count++];
+        let location = truck.children[1].children[3].children[0].innerHTML;
+        let truckId = truck.children[1].children[4].innerHTML;
+        savedVals.push([name, rating, location, truckId]);
+    })
+
+    function initMap() {
+        const geocoder = new google.maps.Geocoder();
+        const toronto = { lat: 43.651070, lng: -79.347015 };
+        const map = new google.maps.Map(document.getElementById("map"), {
+            zoom: 11,
+            center: toronto,
+        })
+        savedVals.forEach((truck) => {
+            geocodeAddress(geocoder, map, truck);
+        })
+    }
+
+    function geocodeAddress(geocoder, resultsMap, truck) {
+        geocoder.geocode({ 'address': truck[2] }, function (results, status) {
+            if (status == 'OK') {
+                const contentString =
+                    `<div class="pin">` +
+                    `<div id="title">${truck[0]}</div>` +
+                    `<div>Rating: ${truck[1]}</div>` +
+                    `<div>${truck[2]}</div>` +
+                    `<div><a id="details" href=${truck[3]}>Show Details</a></div>` +
+                    `</div>`
+                const infowindow = new google.maps.InfoWindow({
+                    content: contentString,
+                });
+                let marker = new google.maps.Marker({
+                    map: resultsMap,
+                    position: results[0].geometry.location,
+                    title: truck[0],
+                });
+                marker.addListener('click', () => {
+                    infowindow.open(map, marker);
+                })
+            } else {
+                alert('Geocode was not successful for the following reason: ' + status);
+            }
+        });
+    }
+
+    // initMap()
+</script>
 
 {% endblock %}
